--- a/gui/po/zh/untangle-install-wizard.po
+++ b/gui/po/zh/untangle-install-wizard.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-09-11 13:45+0300\n"
+"POT-Creation-Date: 2008-11-04 11:30-0800\n"
 "PO-Revision-Date: 2008-09-23 22:00-0500\n"
 "Last-Translator: Jie(Jack) Zhu <J.Zhu@Impactek.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -21,7 +21,8 @@ msgstr ""
 
 #: ../api/com/untangle/gui/install/InstallBenchmarkJPanel.java:77
 #: ../api/com/untangle/gui/install/InstallBenchmarkJPanel.java:312
-msgid "These tests show you if your computer meets minimum hardware requirements."
+msgid ""
+"These tests show you if your computer meets minimum hardware requirements."
 msgstr "这些测试让您知道您的计算机是否满足硬件的最小系统需求。"
 
 #: ../api/com/untangle/gui/install/InstallBenchmarkJPanel.java:78
@@ -105,23 +106,45 @@ msgid "{0} interface"
 msgstr "{0}网卡"
 
 #: ../api/com/untangle/gui/install/InstallBenchmarkJPanel.java:173
-msgid "<html><font color=\"#FF0000\"><b>Warning!</b><br>Your hardware does not meet minimum requirements. This system may not function properly.<br>You may continue installation, but it is recommended that you upgrade your system hardware.<br><br>Press the Next button in the main window to continue.</font></html>"
-msgstr "<html><font color=\"#FF0000\"><b>警告！</b><br>您的计算机硬件不满足最基本系统需求。该系统也许无法正常运行。<br>您可以继续安装，但建议您升级您的系统硬件。<br><br>点击主窗口中的\"下一步\"按钮继续。</font></html>"
+msgid ""
+"<html><font color=\"#FF0000\"><b>Warning!</b><br>Your hardware does not meet "
+"minimum requirements. This system may not function properly.<br>You may "
+"continue installation, but it is recommended that you upgrade your system "
+"hardware.<br><br>Press the Next button in the main window to continue.</"
+"font></html>"
+msgstr ""
+"<html><font color=\"#FF0000\"><b>警告！</b><br>您的计算机硬件不满足最基本系统"
+"需求。该系统也许无法正常运行。<br>您可以继续安装，但建议您升级您的系统硬件。"
+"<br><br>点击主窗口中的\"下一步\"按钮继续。</font></html>"
 
 #: ../api/com/untangle/gui/install/InstallBenchmarkJPanel.java:178
-msgid "<html><font color=\"#FF9B00\"><b>Warning!</b><br>Your hardware meets minimum requirements, but performance may not be optimal.<br>Press the Next button in the main window to continue.</font></html>"
-msgstr "<html><font color=\"#FF9B00\"><b>警告！</b><br>尽管您的计算机硬件满足最低系统需求，但并不能达到最理想的运行状态。<br>点击主窗口中的\"下一步\"按钮继续。</font></html>"
+msgid ""
+"<html><font color=\"#FF9B00\"><b>Warning!</b><br>Your hardware meets minimum "
+"requirements, but performance may not be optimal.<br>Press the Next button "
+"in the main window to continue.</font></html>"
+msgstr ""
+"<html><font color=\"#FF9B00\"><b>警告！</b><br>尽管您的计算机硬件满足最低系统"
+"需求，但并不能达到最理想的运行状态。<br>点击主窗口中的\"下一步\"按钮继续。</"
+"font></html>"
 
 #: ../api/com/untangle/gui/install/InstallBenchmarkJPanel.java:182
-msgid "<html><font color=\"#445BFF\"><b>Success!</b><br>Your hardware meets all requirements.<br>Press the Next button in the main window to continue.</font></html>"
-msgstr "<html><font color=\"#445BFF\"><b>成功！</b><br>您的计算机硬件满足所有的系统需求。<br>点击主窗口中的\"下一步\"按钮继续。</font></html>"
+msgid ""
+"<html><font color=\"#445BFF\"><b>Success!</b><br>Your hardware meets all "
+"requirements.<br>Press the Next button in the main window to continue.</"
+"font></html>"
+msgstr ""
+"<html><font color=\"#445BFF\"><b>成功！</b><br>您的计算机硬件满足所有的系统需"
+"求。<br>点击主窗口中的\"下一步\"按钮继续。</font></html>"
 
 #: ../api/com/untangle/gui/install/InstallBenchmarkJPanel.java:185
 #: ../api/com/untangle/gui/install/InstallBenchmarkJPanel.java:186
 #: ../api/com/untangle/gui/install/InstallDiskJPanel.java:113
 #: ../api/com/untangle/gui/install/InstallWarningJPanel.java:55
+#: ../api/com/untangle/gui/install/InstallWizard.java:55
+#: ../api/com/untangle/gui/install/InstallWizard.java:79
 #: ../api/com/untangle/gui/install/InstallWizard.java:107
-msgid "Install Wizard"
+#, fuzzy
+msgid "Installation Wizard"
 msgstr "安装向导"
 
 #: ../api/com/untangle/gui/install/InstallBenchmarkJPanel.java:186
@@ -159,19 +182,27 @@ msgstr "失败{0}"
 
 #: ../api/com/untangle/gui/install/InstallDiskJPanel.java:68
 #: ../api/com/untangle/gui/install/InstallDiskJPanel.java:173
-msgid "<html>This list shows the boot disks that were found.  <font color='#FF0000'>Please choose a disk for the Untangle Platform installation.  Warning, all the data on the boot disk you select will be deleted.</font></html>"
-msgstr "<html>该列表显示所有可找到的可启动磁盘。<font color='#FF0000'>请选择一个用于Untangle平台安装的磁盘。警告，所有在该启动盘上的数据将被删除。</font></html>"
+#, fuzzy
+msgid ""
+"<html>This list shows the boot disks that were found.  <font "
+"color='#FF0000'>Please choose a disk for installation.  Warning, all the "
+"data on the boot disk you select will be deleted.</font></html>"
+msgstr ""
+"<html>该列表显示所有可找到的可启动磁盘。<font color='#FF0000'>请选择一个用于"
+"Untangle平台安装的磁盘。警告，所有在该启动盘上的数据将被删除。</font></html>"
 
 #: ../api/com/untangle/gui/install/InstallDiskJPanel.java:76
 msgid "Error scanning disks"
 msgstr "磁盘扫描错误"
 
 #: ../api/com/untangle/gui/install/InstallDiskJPanel.java:114
-msgid "You must select a boot disk which you would like to install Untangle onto."
+#, fuzzy
+msgid "You must select a boot disk which you would like to install onto."
 msgstr "您必须选择一个可以用于Untangle安装的可启动磁盘。"
 
 #: ../api/com/untangle/gui/install/InstallDiskJPanel.java:115
-msgid "Install Wizard Message"
+#, fuzzy
+msgid "Installation Wizard Message"
 msgstr "安装向导信息"
 
 #: ../api/com/untangle/gui/install/InstallDiskJPanel.java:115
@@ -188,12 +219,15 @@ msgid "License Agreement"
 msgstr "许可证协议"
 
 #: ../api/com/untangle/gui/install/InstallWarningJPanel.java:56
-msgid "Your selected disk will be erased if you continue installation. Would you like to continue?"
+msgid ""
+"Your selected disk will be erased if you continue installation. Would you "
+"like to continue?"
 msgstr "如果继续安装，您所选择的磁盘将被清空。您还要继续吗？"
 
 #: ../api/com/untangle/gui/install/InstallWarningJPanel.java:57
 #: ../api/com/untangle/gui/install/InstallWizard.java:109
-msgid "Install Wizard Warning"
+#, fuzzy
+msgid "Installation Wizard Warning"
 msgstr "安装向导警告"
 
 #: ../api/com/untangle/gui/install/InstallWarningJPanel.java:59
@@ -211,36 +245,49 @@ msgstr "警告！"
 
 #: ../api/com/untangle/gui/install/InstallWarningJPanel.java:71
 #: ../api/com/untangle/gui/install/InstallWarningJPanel.java:106
-msgid "If you continue, in preparation for the Untangle Platform installation process, YOUR DISK WILL BE ERASED AND ALL ITS DATA WILL BE LOST!"
-msgstr "由于开始准备Untangle平台的安装过程，如果继续的话，<html><b>您磁盘上的所有数据将被清除！</b></html>"
+#, fuzzy
+msgid ""
+"If you continue, in preparation for the installation process, YOUR DISK WILL "
+"BE ERASED AND ALL ITS DATA WILL BE LOST!"
+msgstr ""
+"由于开始准备Untangle平台的安装过程，如果继续的话，<html><b>您磁盘上的所有数据"
+"将被清除！</b></html>"
 
 #: ../api/com/untangle/gui/install/InstallWarningJPanel.java:72
 #: ../api/com/untangle/gui/install/InstallWarningJPanel.java:116
-msgid "If you would not like to continue, press the Close Window button.  Otherwise, press the Finish button."
+msgid ""
+"If you would not like to continue, press the Close Window button.  "
+"Otherwise, press the Finish button."
 msgstr "如果您不想继续，请点“关闭窗口”按钮。否则,请点击“完成”按钮。"
 
 #: ../api/com/untangle/gui/install/InstallWelcomeJPanel.java:91
-#: ../api/com/untangle/gui/install/InstallWelcomeJPanel.java:116
-msgid "<html>Welcome to the<br>Untangle Platform Install Wizard!</html>"
+#, fuzzy
+msgid "<html>Welcome to the<br> Installation Wizard!</html>"
 msgstr "<html>欢迎进入<br>Untangle平台安装向导！</html>"
 
 #: ../api/com/untangle/gui/install/InstallWelcomeJPanel.java:92
 #: ../api/com/untangle/gui/install/InstallWelcomeJPanel.java:126
-msgid "<html>This wizard will take you step-by-step through<br> the Untangle Platform CD installation process.</html>"
-msgstr "<html>该向导将会指导您一步一步地完成<br>Untangle平台光盘的安装过程。</html>"
+#, fuzzy
+msgid ""
+"<html>This wizard will take you step-by-step through<br> the CD installation "
+"process.</html>"
+msgstr ""
+"<html>该向导将会指导您一步一步地完成<br>Untangle平台光盘的安装过程。</html>"
 
 #: ../api/com/untangle/gui/install/InstallWelcomeJPanel.java:93
 #: ../api/com/untangle/gui/install/InstallWelcomeJPanel.java:137
 msgid "Language:"
 msgstr "语言："
 
-#: ../api/com/untangle/gui/install/InstallWizard.java:55
-#: ../api/com/untangle/gui/install/InstallWizard.java:79
-msgid "Untangle Platform Install Wizard"
-msgstr "Untangle平台安装向导"
+#: ../api/com/untangle/gui/install/InstallWelcomeJPanel.java:116
+#, fuzzy
+msgid "<html>Welcome to the<br>Installation Wizard!</html>"
+msgstr "<html>欢迎进入<br>Untangle平台安装向导！</html>"
 
 #: ../api/com/untangle/gui/install/InstallWizard.java:108
-msgid "If you exit now, you will not be able to continue installation. You should continue, if possible."
+msgid ""
+"If you exit now, you will not be able to continue installation. You should "
+"continue, if possible."
 msgstr "如果您现在退出的话，您将无法继续完成安装。如果可能的话，您应该继续。"
 
 #: ../api/com/untangle/gui/install/InstallWizard.java:111
@@ -313,3 +360,5 @@ msgstr "完成"
 msgid "Error sleeping"
 msgstr "睡眠出错"
 
+#~ msgid "Untangle Platform Install Wizard"
+#~ msgstr "Untangle平台安装向导"
